fix ui overflow

--- a/static/styles/tab_list.css
+++ b/static/styles/tab_list.css
@@ -236,4 +236,5 @@
     height: 500px;
     width: 500px;
     z-index: 10;
+    overflow-y: scroll;
 }
